Renamig LoginController to UserController and adding specific object to handle JWT token to get expiration date instead of expiresIn time in milliseconds